base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo
spec:
  selector:
    app: gitops-demo
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
